--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "angular": "^1.7.5",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
-    "html5-boilerplate": "0.0.1"
+    "bootstrap": "^4.5.2",
+    "html5-boilerplate": "0.0.1",
+    "konva": "^7.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.5",
