--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "repository": "https://github.com/angular/angular-seed",
   "license": "MIT",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "angular": "^1.7.5",
     "angular-loader": "^1.7.5",
     "angular-route": "^1.7.5",
     "bootstrap": "^4.5.2",
     "html5-boilerplate": "0.0.1",
+    "jquery": "^3.5.1",
     "konva": "^7.1.3"
   },
   "devDependencies": {
