--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "angular-mocks": "^1.7.5",
     "cpx": "^1.5.0",
     "gulp": "^4.0.2",
+    "gulp-install": "^1.1.0",
     "gulp-npm-dist": "^1.0.3",
+    "gulp-rename": "^2.0.0",
     "http-server": "^0.11.1",
     "jasmine-core": "^3.3.0",
     "karma": "^3.1.1",
@@ -33,7 +35,7 @@
     "update-deps": "npm update",
     "postupdate-deps": "npm run copy-libs",
     "copy-libs": "cpx \"node_modules/{angular,angular-*,html5-boilerplate/dist}/**/*\" app/lib -C",
-    "prestart": "npm install; gulp",
+    "prestart": "gulp",
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
